--- a/Aliento App/Presentation/Features/Sermons/SermonsViewController.xib
+++ b/Aliento App/Presentation/Features/Sermons/SermonsViewController.xib
@@ -9,7 +9,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="Predicas" customModule="Aliento_App" customModuleProvider="target">
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="SermonsViewController" customModule="Aliento_App" customModuleProvider="target">
             <connections>
                 <outlet property="sermonsCollectionView" destination="mVX-9M-Syf" id="Kiz-Zf-nuI"/>
                 <outlet property="view" destination="iN0-l3-epB" id="NT9-Lp-Pb6"/>
