--- a/Aliento App/Presentation/Features/Home/Home.xib
+++ b/Aliento App/Presentation/Features/Home/Home.xib
@@ -20,7 +20,7 @@
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="iN0-l3-epB">
-            <rect key="frame" x="0.0" y="0.0" width="582" height="924"/>
+            <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Categorias" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ze4-hf-haL">
@@ -36,7 +36,7 @@
                     <nil key="highlightedColor"/>
                 </label>
                 <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ufQ-Nl-fS7">
-                    <rect key="frame" x="0.0" y="100.5" width="582" height="166"/>
+                    <rect key="frame" x="0.0" y="100.5" width="414" height="166"/>
                     <subviews>
                         <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="E0I-ni-fB8">
                             <rect key="frame" x="0.0" y="0.0" width="768" height="166"/>
@@ -44,7 +44,7 @@
                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="bPd-9J-KZW" userLabel="card_one">
                                     <rect key="frame" x="0.0" y="0.0" width="256" height="166"/>
                                     <subviews>
-                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo_negro" translatesAutoresizingMaskIntoConstraints="NO" id="LJm-Nw-kAq">
+                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo_negro" translatesAutoresizingMaskIntoConstraints="NO" id="LJm-Nw-kAq">
                                             <rect key="frame" x="8" y="8" width="240" height="150"/>
                                             <color key="backgroundColor" name="AccentColor"/>
                                             <constraints>
@@ -157,7 +157,7 @@
                     <viewLayoutGuide key="frameLayoutGuide" id="KZS-GT-R0U"/>
                 </scrollView>
                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="J3n-yF-11Z">
-                    <rect key="frame" x="8" y="319" width="566" height="120"/>
+                    <rect key="frame" x="8" y="319" width="398" height="120"/>
                     <color key="backgroundColor" name="AccentColor"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="120" id="Fnu-kA-aNs"/>
@@ -169,7 +169,7 @@
                     </userDefinedRuntimeAttributes>
                 </imageView>
                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="i37-FX-pT1">
-                    <rect key="frame" x="8" y="455" width="566" height="120"/>
+                    <rect key="frame" x="8" y="455" width="398" height="120"/>
                     <color key="backgroundColor" name="AccentColor"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="120" id="1kz-c7-4OX"/>
@@ -181,7 +181,7 @@
                     </userDefinedRuntimeAttributes>
                 </imageView>
                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="BII-Zv-61P">
-                    <rect key="frame" x="8" y="591" width="566" height="120"/>
+                    <rect key="frame" x="8" y="591" width="398" height="120"/>
                     <color key="backgroundColor" name="AccentColor"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="120" id="FIN-1R-Kx2"/>
