--- a/Aliento App/Presentation/Features/Sermons/List/Collection View/SermonItemCell.xib
+++ b/Aliento App/Presentation/Features/Sermons/List/Collection View/SermonItemCell.xib
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="21225" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_0" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21207"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="collection view cell content view" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -19,7 +19,7 @@
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Phb-Sc-RXh">
-                        <rect key="frame" x="8" y="0.0" width="398" height="130"/>
+                        <rect key="frame" x="8" y="2" width="398" height="126"/>
                         <color key="backgroundColor" systemColor="systemGray5Color"/>
                     </view>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="M5h-Vh-GXF">
@@ -58,8 +58,8 @@
                     <constraint firstItem="Phb-Sc-RXh" firstAttribute="leading" secondItem="Tmt-Iv-Z8W" secondAttribute="leading" constant="8" id="gIS-6J-Hob"/>
                     <constraint firstItem="M5h-Vh-GXF" firstAttribute="top" secondItem="Tmt-Iv-Z8W" secondAttribute="top" constant="32" id="gwK-GN-i6y"/>
                     <constraint firstAttribute="trailing" secondItem="1HY-Pp-RtW" secondAttribute="trailing" constant="24" id="stG-mU-G58"/>
-                    <constraint firstItem="Phb-Sc-RXh" firstAttribute="top" secondItem="Tmt-Iv-Z8W" secondAttribute="top" id="teL-OV-vwU"/>
-                    <constraint firstAttribute="bottom" secondItem="Phb-Sc-RXh" secondAttribute="bottom" id="tlW-YI-kXD"/>
+                    <constraint firstItem="Phb-Sc-RXh" firstAttribute="top" secondItem="Tmt-Iv-Z8W" secondAttribute="top" constant="2" id="teL-OV-vwU"/>
+                    <constraint firstAttribute="bottom" secondItem="Phb-Sc-RXh" secondAttribute="bottom" constant="2" id="tlW-YI-kXD"/>
                     <constraint firstItem="evH-j8-QKQ" firstAttribute="leading" secondItem="Tmt-Iv-Z8W" secondAttribute="leading" constant="24" id="ybG-Ky-hNd"/>
                 </constraints>
             </collectionViewCellContentView>
