--- a/Aliento App/Presentation/Features/Sermons/Video/CollectionView/VideoSermonItemCell.xib
+++ b/Aliento App/Presentation/Features/Sermons/Video/CollectionView/VideoSermonItemCell.xib
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="21225" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_0" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21207"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="collection view cell content view" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -12,58 +12,65 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="VideoSermonItemCell" id="2jo-WW-bxm" customClass="VideoSermonItemCell" customModule="Aliento_App" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="414" height="130"/>
+            <rect key="frame" x="0.0" y="0.0" width="417" height="200"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-            <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="fed-Bj-Y58">
-                <rect key="frame" x="0.0" y="0.0" width="414" height="130"/>
+            <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" ambiguous="YES" insetsLayoutMarginsFromSafeArea="NO" id="fed-Bj-Y58">
+                <rect key="frame" x="0.0" y="0.0" width="417" height="200"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
-                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ab5-pz-SHZ">
-                        <rect key="frame" x="8" y="2" width="398" height="126"/>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ab5-pz-SHZ" userLabel="card">
+                        <rect key="frame" x="8" y="2" width="401" height="200"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9eT-qy-Tpn">
+                                <rect key="frame" x="56" y="141" width="33" height="15"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="etQ-WF-Erd">
+                                <rect key="frame" x="0.0" y="0.0" width="401" height="125"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="401" id="COA-db-Afk"/>
+                                    <constraint firstAttribute="height" constant="125" id="dOn-O9-B43"/>
+                                </constraints>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="252" verticalHuggingPriority="251" text="Date" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GIJ-SW-2R7">
+                                <rect key="frame" x="358.33333333333331" y="169" width="26.666666666666686" height="15"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Duration" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vGe-Sz-wMr">
+                                <rect key="frame" x="56" y="169" width="294.33333333333331" height="15"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
                         <color key="backgroundColor" systemColor="systemGray5Color"/>
-                    </view>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9eT-qy-Tpn">
-                        <rect key="frame" x="109.99999999999999" y="32" width="47.333333333333329" height="21.666666666666671"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="18"/>
-                        <nil key="textColor"/>
-                        <nil key="highlightedColor"/>
-                    </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="252" verticalHuggingPriority="251" text="Duration" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vGe-Sz-wMr">
-                        <rect key="frame" x="321.33333333333331" y="76.333333333333329" width="68.666666666666686" height="21.666666666666671"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="18"/>
-                        <nil key="textColor"/>
-                        <nil key="highlightedColor"/>
-                    </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Date" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GIJ-SW-2R7">
-                        <rect key="frame" x="110" y="76.333333333333329" width="38" height="21.666666666666671"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="18"/>
-                        <nil key="textColor"/>
-                        <nil key="highlightedColor"/>
-                    </label>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="etQ-WF-Erd">
-                        <rect key="frame" x="24" y="30" width="70" height="70"/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="70" id="FfX-r3-Ihl"/>
-                            <constraint firstAttribute="width" constant="70" id="vwO-Y7-iiI"/>
+                            <constraint firstAttribute="trailing" secondItem="etQ-WF-Erd" secondAttribute="trailing" id="55c-ig-EwP"/>
+                            <constraint firstAttribute="trailing" secondItem="GIJ-SW-2R7" secondAttribute="trailing" constant="16" id="96x-Am-rv7"/>
+                            <constraint firstItem="GIJ-SW-2R7" firstAttribute="leading" secondItem="vGe-Sz-wMr" secondAttribute="trailing" constant="8" id="Htn-ft-Twp"/>
+                            <constraint firstItem="9eT-qy-Tpn" firstAttribute="leading" secondItem="ab5-pz-SHZ" secondAttribute="leading" constant="56" id="I6Q-h3-hZi"/>
+                            <constraint firstItem="vGe-Sz-wMr" firstAttribute="leading" secondItem="ab5-pz-SHZ" secondAttribute="leading" constant="56" id="Qu8-2u-NpZ"/>
+                            <constraint firstAttribute="bottom" secondItem="vGe-Sz-wMr" secondAttribute="bottom" constant="16" id="TKp-0e-728"/>
+                            <constraint firstItem="etQ-WF-Erd" firstAttribute="top" secondItem="ab5-pz-SHZ" secondAttribute="top" id="YDO-rJ-6wz"/>
+                            <constraint firstItem="etQ-WF-Erd" firstAttribute="leading" secondItem="ab5-pz-SHZ" secondAttribute="leading" id="ZFo-SJ-pBX"/>
+                            <constraint firstAttribute="height" constant="200" id="ftD-s9-soT"/>
+                            <constraint firstAttribute="bottom" secondItem="GIJ-SW-2R7" secondAttribute="bottom" constant="16" id="ttS-31-v3z"/>
+                            <constraint firstItem="9eT-qy-Tpn" firstAttribute="top" secondItem="etQ-WF-Erd" secondAttribute="bottom" constant="16" id="xP2-dr-1vc"/>
                         </constraints>
-                    </imageView>
+                    </view>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="etQ-WF-Erd" firstAttribute="leading" secondItem="fed-Bj-Y58" secondAttribute="leading" constant="24" id="ITH-Lt-3zf"/>
                     <constraint firstItem="ab5-pz-SHZ" firstAttribute="leading" secondItem="fed-Bj-Y58" secondAttribute="leading" constant="8" id="KrP-t3-ztW"/>
                     <constraint firstAttribute="trailing" secondItem="ab5-pz-SHZ" secondAttribute="trailing" constant="8" id="Rbs-uw-jDw"/>
                     <constraint firstItem="ab5-pz-SHZ" firstAttribute="top" secondItem="fed-Bj-Y58" secondAttribute="top" constant="2" id="ViX-RY-jyI"/>
-                    <constraint firstAttribute="trailing" secondItem="vGe-Sz-wMr" secondAttribute="trailing" constant="24" id="Yeq-4E-rBh"/>
-                    <constraint firstAttribute="bottom" secondItem="GIJ-SW-2R7" secondAttribute="bottom" constant="32" id="b6F-Vs-8a2"/>
-                    <constraint firstItem="9eT-qy-Tpn" firstAttribute="leading" secondItem="etQ-WF-Erd" secondAttribute="trailing" constant="16" id="e63-bE-wIf"/>
-                    <constraint firstAttribute="bottom" secondItem="vGe-Sz-wMr" secondAttribute="bottom" constant="32" id="fZZ-JO-eaC"/>
-                    <constraint firstItem="etQ-WF-Erd" firstAttribute="centerY" secondItem="fed-Bj-Y58" secondAttribute="centerY" id="gKX-Yf-qkp"/>
                     <constraint firstAttribute="bottom" secondItem="ab5-pz-SHZ" secondAttribute="bottom" constant="2" id="i2f-rE-j2m"/>
-                    <constraint firstItem="9eT-qy-Tpn" firstAttribute="top" secondItem="fed-Bj-Y58" secondAttribute="top" constant="32" id="jnQ-if-nxY"/>
-                    <constraint firstItem="GIJ-SW-2R7" firstAttribute="leading" secondItem="etQ-WF-Erd" secondAttribute="trailing" constant="16" id="pqv-fr-6A5"/>
                 </constraints>
             </collectionViewCellContentView>
-            <size key="customSize" width="808" height="421"/>
+            <size key="customSize" width="811" height="491"/>
             <connections>
                 <outlet property="background" destination="ab5-pz-SHZ" id="lNF-4n-SVQ"/>
                 <outlet property="dateLabel" destination="GIJ-SW-2R7" id="dSs-7v-Xfz"/>
@@ -71,7 +78,7 @@
                 <outlet property="imageView" destination="etQ-WF-Erd" id="cvk-N3-hVE"/>
                 <outlet property="nameLabel" destination="9eT-qy-Tpn" id="fw2-6t-Zk3"/>
             </connections>
-            <point key="canvasLocation" x="658.46153846153845" y="-152.84360189573459"/>
+            <point key="canvasLocation" x="460.76923076923077" y="-128.67298578199052"/>
         </collectionViewCell>
     </objects>
     <resources>
