--- a/Aliento App/Presentation/Features/Sermons/Audio/SermonsViewController.xib
+++ b/Aliento App/Presentation/Features/Sermons/Audio/SermonsViewController.xib
@@ -34,17 +34,18 @@
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="5mM-RA-EsW">
                     <rect key="frame" x="334" y="798" width="70" height="70"/>
                     <subviews>
-                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="youtube_icon" translatesAutoresizingMaskIntoConstraints="NO" id="yVM-KQ-BaD">
-                            <rect key="frame" x="0.0" y="0.0" width="70" height="70"/>
+                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="768px-Spotify" translatesAutoresizingMaskIntoConstraints="NO" id="yVM-KQ-BaD">
+                            <rect key="frame" x="16" y="0.0" width="38" height="70"/>
                         </imageView>
                     </subviews>
-                    <color key="backgroundColor" systemColor="systemRedColor"/>
+                    <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    <color key="tintColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="70" id="DOJ-iy-TE3"/>
                         <constraint firstAttribute="width" secondItem="5mM-RA-EsW" secondAttribute="height" multiplier="1:1" id="OGT-VI-9kT"/>
-                        <constraint firstAttribute="trailing" secondItem="yVM-KQ-BaD" secondAttribute="trailing" id="cSJ-ys-Hef"/>
+                        <constraint firstAttribute="trailing" secondItem="yVM-KQ-BaD" secondAttribute="trailing" constant="16" id="cSJ-ys-Hef"/>
                         <constraint firstItem="yVM-KQ-BaD" firstAttribute="top" secondItem="5mM-RA-EsW" secondAttribute="top" id="f8H-BP-R5I"/>
-                        <constraint firstItem="yVM-KQ-BaD" firstAttribute="leading" secondItem="5mM-RA-EsW" secondAttribute="leading" id="oV9-ra-47j"/>
+                        <constraint firstItem="yVM-KQ-BaD" firstAttribute="leading" secondItem="5mM-RA-EsW" secondAttribute="leading" constant="16" id="oV9-ra-47j"/>
                         <constraint firstAttribute="bottom" secondItem="yVM-KQ-BaD" secondAttribute="bottom" id="tl4-sq-9XC"/>
                     </constraints>
                 </view>
@@ -63,12 +64,9 @@
         </view>
     </objects>
     <resources>
-        <image name="youtube_icon" width="422" height="381"/>
+        <image name="768px-Spotify" width="768" height="768"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
-        <systemColor name="systemRedColor">
-            <color red="1" green="0.23137254901960785" blue="0.18823529411764706" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
