--- a/Aliento App/Presentation/Features/Sermons/Video/VideoSermonsViewController.xib
+++ b/Aliento App/Presentation/Features/Sermons/Video/VideoSermonsViewController.xib
@@ -11,6 +11,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="VideoSermonsViewController" customModule="Aliento_App" customModuleProvider="target">
             <connections>
+                <outlet property="floatinActionButton2" destination="59t-5h-iwJ" id="ZyN-b2-5gJ"/>
                 <outlet property="sermonsCollectionView" destination="Z2c-52-O7w" id="jhT-wV-6jh"/>
                 <outlet property="view" destination="iN0-l3-epB" id="7at-qY-I0N"/>
             </connections>
@@ -30,12 +31,31 @@
                         <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                     </collectionViewFlowLayout>
                 </collectionView>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="59t-5h-iwJ">
+                    <rect key="frame" x="296" y="716" width="70" height="70"/>
+                    <subviews>
+                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="youtube_icon" translatesAutoresizingMaskIntoConstraints="NO" id="jKA-Kz-3v9">
+                            <rect key="frame" x="0.0" y="0.0" width="70" height="70"/>
+                        </imageView>
+                    </subviews>
+                    <color key="backgroundColor" systemColor="systemRedColor"/>
+                    <constraints>
+                        <constraint firstItem="jKA-Kz-3v9" firstAttribute="top" secondItem="59t-5h-iwJ" secondAttribute="top" id="FGk-7W-5rk"/>
+                        <constraint firstItem="jKA-Kz-3v9" firstAttribute="leading" secondItem="59t-5h-iwJ" secondAttribute="leading" id="WOw-rR-WCv"/>
+                        <constraint firstAttribute="width" constant="70" id="dxw-LB-MIG"/>
+                        <constraint firstAttribute="trailing" secondItem="jKA-Kz-3v9" secondAttribute="trailing" id="j4l-AU-fO9"/>
+                        <constraint firstAttribute="bottom" secondItem="jKA-Kz-3v9" secondAttribute="bottom" id="n8e-b1-oZS"/>
+                        <constraint firstAttribute="height" constant="70" id="zXF-66-fcM"/>
+                    </constraints>
+                </view>
             </subviews>
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
             <constraints>
+                <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="59t-5h-iwJ" secondAttribute="trailing" constant="24" id="4be-KA-hdp"/>
                 <constraint firstAttribute="trailing" secondItem="Z2c-52-O7w" secondAttribute="trailing" id="97h-pZ-NCA"/>
                 <constraint firstItem="Z2c-52-O7w" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" id="Hi4-tG-BY5"/>
+                <constraint firstItem="vUN-kp-3ea" firstAttribute="bottom" secondItem="59t-5h-iwJ" secondAttribute="bottom" constant="24" id="VEY-Jd-xuF"/>
                 <constraint firstAttribute="bottom" secondItem="Z2c-52-O7w" secondAttribute="bottom" id="mA7-gI-QCz"/>
                 <constraint firstItem="Z2c-52-O7w" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="uCX-Lq-rAj"/>
             </constraints>
@@ -43,8 +63,12 @@
         </view>
     </objects>
     <resources>
+        <image name="youtube_icon" width="422" height="381"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemRedColor">
+            <color red="1" green="0.23137254901960785" blue="0.18823529411764706" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
