--- a/Aliento App/Presentation/Features/Home/Home.xib
+++ b/Aliento App/Presentation/Features/Home/Home.xib
@@ -39,7 +39,7 @@
                     <rect key="frame" x="0.0" y="44" width="428" height="848"/>
                     <subviews>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="iN0-l3-epB">
-                            <rect key="frame" x="0.0" y="0.0" width="428" height="913"/>
+                            <rect key="frame" x="0.0" y="0.0" width="428" height="912.66666666666663"/>
                             <subviews>
                                 <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="4eo-DA-RZk" customClass="CarouselCollectionView" customModule="Aliento_App" customModuleProvider="target">
                                     <rect key="frame" x="0.0" y="0.0" width="428" height="200"/>
@@ -47,7 +47,7 @@
                                     <constraints>
                                         <constraint firstAttribute="height" constant="200" id="x6i-AW-vlh"/>
                                     </constraints>
-                                    <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="bdM-c2-880">
+                                    <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="10" minimumInteritemSpacing="10" id="bdM-c2-880">
                                         <size key="itemSize" width="128" height="128"/>
                                         <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                         <size key="footerReferenceSize" width="0.0" height="0.0"/>
