--- a/Aliento App/Presentation/Features/Home/Carousel/CarouselItemCell.xib
+++ b/Aliento App/Presentation/Features/Home/Carousel/CarouselItemCell.xib
@@ -1,18 +1,38 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13142" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12042"/>
-        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
+        <capability name="collection view cell content view" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" id="iN0-l3-epB">
-            <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
-            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-            <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
-            <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
-        </view>
+        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="CarouselItemCell" id="o9h-nE-ice" customClass="CarouselItemCell" customModule="Aliento_App" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="532" height="248"/>
+            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+            <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="ZFp-aG-Jae">
+                <rect key="frame" x="0.0" y="0.0" width="532" height="248"/>
+                <autoresizingMask key="autoresizingMask"/>
+                <subviews>
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="I7M-G1-s6f">
+                        <rect key="frame" x="0.0" y="0.0" width="532" height="248"/>
+                    </imageView>
+                </subviews>
+                <constraints>
+                    <constraint firstAttribute="bottom" secondItem="I7M-G1-s6f" secondAttribute="bottom" id="7hC-u1-p78"/>
+                    <constraint firstItem="I7M-G1-s6f" firstAttribute="top" secondItem="ZFp-aG-Jae" secondAttribute="top" id="TIK-1E-aQ4"/>
+                    <constraint firstItem="I7M-G1-s6f" firstAttribute="leading" secondItem="ZFp-aG-Jae" secondAttribute="leading" id="jCe-SU-Uho"/>
+                    <constraint firstAttribute="trailing" secondItem="I7M-G1-s6f" secondAttribute="trailing" id="jbq-B2-nR5"/>
+                </constraints>
+            </collectionViewCellContentView>
+            <size key="customSize" width="532" height="248"/>
+            <connections>
+                <outlet property="carouselImage" destination="I7M-G1-s6f" id="hp6-MI-2fr"/>
+            </connections>
+            <point key="canvasLocation" x="161" y="40"/>
+        </collectionViewCell>
     </objects>
 </document>
